# loong

./: .convention-engineering.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README.zh-CN.md  Taskfile.yml  clippy.toml  deny.toml  loong.sln  loongclaw.spec.json  test_output.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  label_taxonomy.json  labeler.yml
crates/bridge-runtime/: Cargo.toml
crates/bridge-runtime/src/: http_json.rs  lib.rs  policy.rs  process_stdio.rs  protocol.rs
docs/: PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  ROADMAP.md  SECURITY.md  index.md  layered-kernel-design.md  roadmap.md
examples/: README.md
harbor_loong/: __init__.py  agent.py  commands.py
harbor_loongclaw/: __init__.py  agent.py
scripts/: architecture_budget_lib.sh  benchmark_programmatic_pressure.sh  benchmark_wasm_cache.sh  bootstrap_release_local_artifacts.sh  check-docs.sh  check_architecture_boundaries.sh  check_architecture_drift_freshness.sh  check_dep_graph.sh  check_public_repo_hygiene.sh  daemon_changed_test_targets.py  generate_architecture_drift_report.sh  install.ps1  install.sh  pre-commit  release_artifact_lib.sh  run_changed_rust_ci_job.sh  run_selected_daemon_tests.sh  rust_changed_packages.py  stress_daemon_tests.sh  sync_github_labels.py  test_architecture_budget_scripts.sh  test_bootstrap_release_local_artifacts.sh  test_changed_rust_packages.sh  test_changed_rust_packages_runner.sh  test_check_architecture_drift_freshness.sh  (+13 more)
(+1274 files in other folders)
